--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 /*-------------------------------*/  
-/* DEFAULTS*/
+/* BASICS*/
 /*-------------------------------*/  
     body {
         margin: 0px;
         background-image: url("assets/topography.png");
     }
+/*-------------------------------*/ 
+/* FONTS */
+/*-------------------------------*/  
     body, pre {
         font-family: consolas;
         white-space: normal;
@@ -15,79 +18,6 @@
         white-space: normal;
         font-stretch: expanded;
         
-    }  
-
-/*-------------------------------*/ 
-/* MAIN BLOCKS */
-/*-------------------------------*/  
-
-    .navbar {
-        background-color: #333333;
-        overflow: hidden;
-        vertical-align: middle;
-    }
-        /*.navcontent {
-
-        }*/
-        #Navicontainer {
-            display: block;
-           /* height: 50px;*/
-            width: 10%;
-            vertical-align: middle;
-            float: left;
-            /*padding-top: 14px;*/
-            /*padding: 14px 16px;
-            margin-top: 20px;
-            margin-bottom: 20px;*/
-            padding-top: 10px;
-        }
-        #Navicon {
-            /*height: 60px;
-            width: 60px;*/
-            /*padding-top: 25%; */
-            height: 40px;
-            display: block;
-            vertical-align: middle;
-        }
-        #Navbuttons {    
-            display:block;
-            /*height: 100%;*/
-            vertical-align: middle;
-            float: right;            
-        }
-        #Navbuttons a {
-            padding: 1px 16px;
-            margin: 0px;
-            float: right;
-            
-            text-align: center;
-            font-weight: 530;
-            /*margin: 0;
-            width: 50%;*/
-            
-            text-decoration: underline;
-            /*font-size: 17px;*/
-            /*font-weight: 550;*/
-        }
-        #Navbuttons a li {
-            list-style: none;
-            vertical-align: center;
-        }
-
-                /* Change the color of links on hover */
-                #Navbuttons a:hover {
-                    background-color: #ddd;
-                    color: black;
-                }
-                
-                /* Add a color to the active/current link */
-                #Navbuttons a.active {
-                    background-color: #4CAF50;
-                    color: white;
-                }
-    .content {
-        margin-top: 100px;
-        margin-bottom: 50px;
     }
     .intro  {
         font-size: 1.2em;
@@ -102,13 +32,61 @@
     #Wiki H1, #Wiki H2 {
         font-weight: 900;
     }
+/*-------------------------------*/ 
+/* COLORS */
+/*-------------------------------*/  
+    /* All things PINK */
+    .nav-buttons li a, .intro H2 {
+        color: #ff0099;
+    }
+/*-------------------------------*/ 
+/* BLOCK POSITIONING */
+/*-------------------------------*/  
+    /* NAV BAR */
+    .nav-bar{
+        background-color: #333333;
+        margin:0px 0px 75px 0px;
+    }
+    .nav-middle{
+        display:flex;
+        justify-content: space-between;
+    }
+    .nav-picture{ 
+        max-width:10%;
+        /*margin:0;*/
+        display:flex;
+        align-content: center;
+    }
+    .nav-buttons{
+        max-width:80%;
+    }
+        .nav-buttons li{
+            display:inline;
+            list-style: none;
+            padding: 1px 16px;
+            margin: 0px;
+            font-weight: 530;
+            text-decoration: underline;
+        }
+            .nav-buttons li:hover {
+                background-color: #ddd;
+                color: black;
+            }
+        /*#Navbuttons a.active {
+            background-color: #4CAF50;
+            color: white;
+        }*/
+    .content {
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
 /*-------------------------------*/  
 /* POSITIONING GROUPS */
 /*-------------------------------*/  
     /* TOP and Bottom */
     
     /* Middle framed content */
-    .content, .navcontent {
+    .align-main {
         padding-right:10%;
         padding-left:10%;
     }
@@ -116,12 +94,7 @@
     #Separator, #Wiki H1 {
         text-align: center;
     }
-/*-------------------------------*/  
-/* COLOR MANAGEMENT GROUPS */
-/*-------------------------------*/  
-    /* All things PINK */
-    .navbar a, .intro H2 {
-        color: #ff0099;
-    }
+
+
 
 
